# apix

./: .gitignore  .mise.toml  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: app.tsx  main.tsx  styles.css
apps/desktop/src/components/right-panel/: session-panel.tsx
apps/desktop/src/components/shell/: shell.tsx
apps/desktop/src/components/sidebar/: sidebar.tsx
apps/desktop/src/components/timeline/: manual-form.tsx  step-card.tsx  timeline.tsx
apps/desktop/src/components/topbar/: topbar.tsx
apps/desktop/src/hooks/: use-websocket.ts
apps/desktop/src/store/: session-store.ts
docs/: development-workflow.md  user-guide.md
runtime/: README.md  go.mod  go.sum  main.go
runtime/internal/api/: rest.go  websocket.go
runtime/internal/app/: app.go
runtime/internal/core/: executor.go  hub.go  rules.go  session.go  types.go
runtime/internal/httpapi/: collections.go  handler.go  management.go  migrate.go  routes.go  schema.sql  service.go  tools.go
runtime/internal/mcp/: server.go  util.go
runtime/internal/store/: sqlite.go
scripts/: build-sidecar.mjs  dev-runtime.mjs  dev.sh
src-tauri/: Cargo.toml  README.md  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
