[package]
name = "sentris"
version = "0.1.0"
description = "Sentris desktop shell"
authors = ["Sentris Contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "sentris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
rfd = "0.15"
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
