[package]
name = "apix"
version = "0.1.0"
description = "Apix desktop shell"
authors = ["Apix Contributors"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "apix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
rfd = "0.15"
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
